--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@vitejs/plugin-vue": "^5.2.3",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitest/ui": "^3.1.3",
     "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "globals": "^16.0.0",
+    "jsdom": "^26.1.0",
     "prettier": "3.5.3",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
+    "vitest": "^3.1.3",
     "vue-svg-loader": "^0.16.0",
-    "vue-template-compiler": "^2.7.16"
+    "vue-template-compiler": "^2.7.16",
+    "vue-test-utils": "^0.5.0"
   }
 }
